# tracksync

./: .gitignore  Cargo.toml  README.md  build.rs
.sqlx/: query-0c0a2c6966834584d936f6f7afaa1c2e205653ffe0796c0c1b197fa07ba4b319.json  query-162ad7afaeca68c57672b2d2589e456b79d3534d3cfe8cbd8289fad927a98960.json  query-186c1e745f338479c3b44204587723b32b6f2f9b1d78d831e38f52cc997ff868.json  query-19d2eae743ae7b1d2cde049253f7dfe0314a7edaac73d4ef13fe7ae807faa32d.json  query-24ce08f39db9c0c7a13bd6773dc0ed3d090177118d6924ae88abc488fbd38704.json  query-3b3f431e874c180c01f178993da659b9a9215bbfcb555a47698720b856543681.json  query-4269cff6b3f024043865e48148cf4ca56860bb09032850e0cf18e9dcb306c9aa.json  query-5f54bdccb58cf9524504f207dd522954d9fc632d6f88a5b68e242a33bd6b48bc.json  query-678a980b3a8e4c7fb23225b9f14e5b752bd67c1169618c36bc67785b3fc2be06.json  query-716eb6fc78c3f4d43e1b55fa003753d7e25079e08d046f00e89f3d0a0434f0df.json  query-86245ea0c3119d94e08fe0404482b4f8de3241bc067136c0181ff4e0aa2bcc67.json  query-90d659e4ebb83559ac94ba4618a065c5d9966e99d5c318c5b8f9dcaa670ae5b2.json  query-9bf2fda97d829ad09e463504c964619c055032255c4b8c1919c83cba24cd2739.json  query-b621def2ebaef4131a5593bbc5d5a38948d6d66c3f3729a44e37061f3c443fbd.json  query-bc56cdf6e63bf49e2d59a1dd65d769f19ef009ce6caa009e761069d5858252a3.json  query-f026bae33f7999c12b01bae1175d9cff43be9124660d427830305999c5c7ee2c.json  query-f1349b72ca08058d2503c7348ee66ef638dfc1c3ce09cfd2167c01237ed25840.json
database/migrations/local/: 0_base.sql  1_added_dirs.sql  2_albums_view.sql  3_fts.sql  4_filter.sql
src/: cli.rs  fs.rs  main.rs  model.rs
src/cmd/: add.rs  clean.rs  default_filter.rhai  dupes.rs  error.rs  filter.rs  mod.rs  sync.rs
src/db/: instance.rs  lib.rs  mod.rs
src/filter/: filter.rs  mod.rs
