[package]
name = "tunesdirector"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
async-std = { version = "1.12.0", features = [
    "async-attributes",
    "attributes",
] }
sqlx = { version = "0.7.4", features = [
    "runtime-async-std",
    "sqlite",
    "macros",
    "migrate",
] }
audiotags = "0.5.0"
env_logger = "0.11.3"
log = "0.4.21"
async-walkdir = "1.0.0"
futures = "0.3.30"
jwalk = "0.8.1"
clap = { version = "4.5.4", features = ["derive"] }
directories = "5.0.1"
anyhow = "1.0.86"
fs_extra = "1.3.0"
indicatif = "0.17.8"
kdam = "0.5.2"
progressing = "3.0.2"
pgbar = "0.3.1"
smol = "2.0.0"
walkdir = "2.5.0"
sha256 = "1.5.0"
string-builder = "0.2.0"
once_cell = "1.19.0"
similar-string = "1.4.3"
lazy_static = "1.4.0"
regex = "1.10.5"
rhai = "1.19.0"
edit = "0.1.5"
